--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,3 +19,5 @@ logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 # H2 console
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
+
+spring.thymeleaf.cache=false
